week1 day2 오전수업

--- a/Learn/week1/w1_D1/w1_1_DOM.html
+++ b/Learn/week1/w1_D1/w1_1_DOM.html
@@ -23,6 +23,8 @@
         console.log('일반 함수 선언')
     }
 
-    var test
+    var test = () => {
+        console.log('일반 함수 선언')
+    }
   </script>
 </html>
