--- a/Learn/week1/w1_D1/w1_ex3_plus_InnerHTML.html
+++ b/Learn/week1/w1_D1/w1_ex3_plus_InnerHTML.html
@@ -1,3 +1,4 @@
+<!-- EXTEND3. InnerHTML 요소들을 가져오고 PLUS결과 삽입 -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,8 +7,8 @@
   </head>
   <body>
     <ul>
-        <li id="finput">1.0</li>
-        <li id="dInput">5</li>
+        <li id="fInput">1.0</li>
+        <li id="dInput">4</li>
         <input id='inBtn' type="button" value='누르면 더함'/>
         <p id="p">'결과'</p>
     </ul>
