--- a/Learn/week1/w1_D2/w1_prac1-4_introSite.html
+++ b/Learn/week1/w1_D2/w1_prac1-4_introSite.html
@@ -179,7 +179,8 @@
     </div>
 
     <script>
-    // 1) Scroll Navigation
+    
+    // prac 1) Scroll Navigation
     var aTags = document.querySelectorAll('li a'); //<li/> 태그 내의 자식인 <a/>태그 모두 배열로 가져오기
     for(var i = 0; i < aTags.length; i ++) {
         aTags[i].onclick = function(e) {    // e는 이벤트 객체를 말하며 여기에선 onlclick이라는 이벤트이며 function에 들어가는 이벤트 매개변수를 말한다.
@@ -193,9 +194,9 @@
         }
     }    
 
-    // 2) Image Slider
+    // prac 2) Image Slider
 
-    var slider = document.querySelector("di"); //id로 가져오기
+    var slider = document.querySelector("#slider"); //id로 가져오기
     var slides = slider.querySelector(".slides"); //class로 가져오기 => querySelector은 가장 먼저 탐색된 요소를 가져옴
     var slide = slides.querySelectorAll(".slide"); //class로 가져오기 => querySelectorAll은 배열로 가져옴
 
@@ -217,6 +218,87 @@
             currentSlide = 0;
         }
     }, 3000); //3초마다
+
+
+    // prac 3) Tabs
+    
+    var links = document.querySelectorAll('.tabs-list li a') //link를 가진 요소는 <a>태그임 (href의 값이 link)
+    var items = document.querySelectorAll('.tabs-list li')
+    for (var i = 0; i < links.length; i++) {    //links 배열 전체가 가진 요소들에 대해
+        links[i].onclick = function(e) {
+            e.preventDefault() ;    // a태그가 가진 href 링크를 클릭했을때 발생해야할 동작을 자동수행하는 것을 막아줘야 함
+        }
+    }
+
+    for (var i = 0; i < items.length; i++) {    //items 배열 전체가 가진 요소들에 대해
+        items[i].onclick = function() {
+            var tabId = this.querySelector("a").getAttribute('href');   //a태그가 가진 href property값을 가져와서 tabId에 담는다.
+            console.log(this.classList);    //해당 요소가 가진 클래스리스트 log출력
+            document.querySelectorAll(".tabs-list li, .tabs div.tab").forEach(function(item) {  //selectorAll이 반환한 요소배열의 길이만큼 function을 실행시키기 위한 forEach문 -> foreach내에 들어간 function의 매개변수 item은 해당 회차반복의 대상인 item 자체를 받게됨
+                item.classList.remove("active");  // 클래스 리스트 내 기존의 active클래스 삭제(갱신)
+                console.log(item);
+            });
+            document.querySelector(tabId).classList.add("active"); //클릭한 탭 아이디에 active클래스를 추가(갱신)해서 탭시각화 변경
+            this.classList.add("active");
+        }  
+    } 
+
+    // prac 4) 이미지 슬라이더 2
+    document.querySelector(".right-arrow").onclick = function () {
+        var currentSlide = document.querySelector("#photo .slide.active");
+        var nextSlide = currentSlide.nextElementSibling;
+        if (nextSlide === null) {
+            nextSlide = currentSlide.parentElement.firstElementChild;
+        }
+            currentSlide.animate({
+            opacity: [1, 0]
+        }, {
+            duration: 500,
+            easing: "ease",
+            iterations: 1,
+            fill: "both"
+        });
+        currentSlide.classList.remove("active");
+        nextSlide.animate({
+            opacity: [0, 1]
+        }, {
+            duration: 500,
+            easing: "ease",
+            iterations: 1,
+            fill: "both"
+        });
+        nextSlide.classList.add("active");
+    }
+
+//왼쪽 이미지 슬라이드 기능 구현
+    document.querySelector(".left-arrow").onclick = function () { //왼쪽 화살표 요소를 눌렀을 때
+        var currentSlide = document.querySelector("#photo .slide.active"); //photo id를 가진 요소 자식들 중 / slide active 클래스를 가진 요소를 현재 슬라이드로 할당
+        var nextSlide = currentSlide.previousElementSibling; // 현재슬라이드 요소 기준 이전 요소를 다음으로 넘어갈 슬라이드로 선택
+        if (nextSlide === null) {   // 만일 다음 슬라이드가 없을경우(이전 요소가 없는경우 => 순서상 첫번째이므로) 마지막 순서의 슬라이드를 다음 슬라이드 요소로 선택함
+            nextSlide = currentSlide.parentElement.lastElementChild;
+        }
+            currentSlide.animate({ // animate적용하여 자연스럽게 넘기기
+            opacity: [1, 0]
+        }, {
+            duration: 500,
+            easing: "ease",
+            iterations: 1,
+            fill: "both"
+        });
+        currentSlide.classList.remove("active"); //현재슬라이드 요소 에서 active 클래스 제거하여 안보이게
+        nextSlide.animate({
+            opacity: [0, 1]
+        }, {
+            duration: 500,
+            easing: "ease",
+            iterations: 1,
+            fill: "both"
+        });
+        nextSlide.classList.add("active"); //다음 슬라이드가 active클래스를 가져서 보이도록 갱신
+    }
+  
+
+
     </script>
 
     <script src="./jquery-3.5.1.js"></script>
