--- a/Learn/week1/w1_D1/w1D1_ex6_navigationCss.html
+++ b/Learn/week1/w1_D1/w1D1_ex6_navigationCss.html
@@ -25,6 +25,8 @@
     console.log(data[3]);
     console.log(data);
     
-    data[5].addEventListener('onmouseenter',() =)
+    data[5].addEventListener('onmouseenter',() => {
+        
+    })
 </script>
 </html>
